Added pgvector chagnes

--- a/VectorDB-PGVector/pgvector-and-huggingface.ipynb
+++ b/VectorDB-PGVector/pgvector-and-huggingface.ipynb
@@ -62,7 +62,7 @@
    ],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"OPENAI_API_KEY\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"<OPENAI_API_KEY>\"\n",
     "\n",
     "## Loading Environment Variables\n",
     "from dotenv import load_dotenv\n",
@@ -411,7 +411,7 @@
    "source": [
     "# Setup OpenAI\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"OPENAI_API_KEY\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"<OPENAI_API_KEY>\"\n",
     "\n",
     "## Loading Environment Variables\n",
     "from dotenv import load_dotenv\n",
@@ -552,6 +552,10 @@
     "#### 7.1 PGVector and HuggingFace with 768 dim embeddings using sqlalchemy Python API\n",
     "\n",
     "The main uses of SQLAlchemy are avoiding the need to write SQL directly, providing a database agnostic ORM, handling connections and transactions, and giving a high level interface while still allowing low level control when needed. The ORM and abstraction from specific database syntax is the major advantage.\n",
+    "\n",
+    "Make sure we create table first in Pgadmin4:\n",
+    "\n",
+    "CREATE TABLE HuggingFace (uuid uuid PRIMARY KEY, embedding vector(768), document VARCHAR, cmetadata json);\n",
     "\n",
     "Let's create a CustomPGVector class by referencing langchain so that we can allow users to store embeddings into custom table by providing the custom embedding size."
    ]
@@ -800,6 +804,10 @@
     "#### 7.2 PGVector and HuggingFace with 768 dim embeddings using psycopg2 Python API\n",
     "\n",
     "psycopg2 is the new generation psycopg, redesigned to be faster, lighter, and better suited for concurrency. It is the recommended PostgreSQL adapter for current Python versions.\n",
+    "\n",
+    "Make sure we create table first in Pgadmin4:\n",
+    "\n",
+    "CREATE TABLE documents (id uuid PRIMARY KEY, document text, embedding vector(768));\n",
     "\n",
     "Let's create a CustomPGVector class so that we can allow users to store and query embeddings into a custom table by providing the custom embedding size."
    ]
