--- a/VectorDB-PGVector/pgvector-and-huggingface.ipynb
+++ b/VectorDB-PGVector/pgvector-and-huggingface.ipynb
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,8 +885,8 @@
     "\n",
     "        uuids = []\n",
     "        for document, embedding in zip(texts, embeddings):\n",
-    "            doc_id = uuid.uuid4()\n",
-    "            self.cur.execute(f'INSERT INTO {self.table_name} (id, document, embedding) VALUES (%s, %s, %s) RETURNING id', (doc_id, document, embedding))\n",
+    "            doc_id = str(uuid.uuid4())\n",
+    "            self.cur.execute(f'INSERT INTO {self.table_name} (id, tweet, embedding) VALUES (%s, %s, %s) RETURNING id', (doc_id, document, embedding))\n",
     "            uuids.append(self.cur.fetchone()[0])\n",
     "\n",
     "        return uuids\n",
@@ -955,14 +955,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['3245d70d-7a92-487a-8d82-ed30083bea88', '78082dd8-92e3-4206-8341-91f4807903ba', '2442cd86-cc65-4c6b-bffe-0ce6a932b45c', '987414da-559f-4a23-8a1e-acc332332ab0', '6121d6d9-4b50-4117-a313-73369990aedd', '7efb7549-5663-429f-ade2-daf1c812b2f3', '50dc6f83-9ea8-4a98-8bcc-1052e2c4251c', '2bf6f7c3-7870-4301-a2b5-b56efc215a53', 'b0cc8899-4519-4206-b106-4684d66d4a1b', 'a09f4de7-f7e4-4e8a-b5cb-e3d2597915d8', '7cbad19a-4d12-4356-b8ab-fd7af0dcc96f', 'ef54de6c-cb2c-449f-b49f-aeb37b2da117', '9435702c-68a9-40ed-bf7e-d5bb399d0a78', '6231002f-28c5-4656-8e31-ab0b23d16ec9', '3eba89e4-1bb4-4f28-ae75-5351ce8eceab']\n"
+      "['01d89557-b546-41f2-a3ed-6dc633a7e383', '41929605-157e-4c88-bf87-f4274261b223', '214fc1ad-cb12-41a8-8c9b-eb4c09db2692', '3ef168ea-1788-4b88-b5f3-aebb5771530f', '75f5fcd4-66bd-418c-9873-403365fefb8b', '4e4c9008-2bd6-445e-abb3-98405c8330b5', 'b3ad6f11-fa80-4cbe-9dcc-cebad2ca6881', '4a4b128a-afed-4433-bf3c-0678336a9245', '6b20bf27-27a9-4123-b5f6-7afdf8af555c', '5fb64d84-72ff-437c-b90d-ac5a8161e207', '4d12a0a7-7d9d-4702-a12b-66a5bf27eb50']\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -972,7 +983,7 @@
     "# Example usage\n",
     "model = SentenceTransformer('all-mpnet-base-v2')\n",
     "CONNECTION_STRING = 'postgresql://postgres:test@localhost:5432/vector_db'\n",
-    "TABLE_NAME = \"documents\"\n",
+    "TABLE_NAME = \"DOCUMENTS\"\n",
     "\n",
     "store = CustomPGVector(\n",
     "    model=model,\n",
@@ -982,22 +993,34 @@
     "    # table_columns=TABLE_COLUMNS\n",
     ")\n",
     "\n",
+    "# texts = [\n",
+    "# \"Madam Speaker, Madam Vice President, our First Lady and Second Gentleman. Members of Congress and the Cabinet. Justices of the Supreme Court. My fellow Americans.\",\n",
+    "# \"Last year COVID-19 kept us apart. This year we are finally together again.\",\n",
+    "# \"Tonight, we meet as Democrats Republicans and Independents. But most importantly as Americans.\",\n",
+    "# \"With a duty to one another to the American people to the Constitution.\",\n",
+    "# \"And with an unwavering resolve that freedom will always triumph over tyranny.\",\n",
+    "# \"Six days ago, Russia’s Vladimir Putin sought to shake the foundations of the free world thinking he could make it bend to his menacing ways. But he badly miscalculated.\",\n",
+    "# \"He thought he could roll into Ukraine and the world would roll over. Instead he met a wall of strength he never imagined.\",\n",
+    "# \"He met the Ukrainian people.\",\n",
+    "# \"From President Zelenskyy to every Ukrainian, their fearlessness, their courage, their determination, inspires the world.\",\n",
+    "# \"Groups of citizens blocking tanks with their bodies. Everyone from students to retirees teachers turned soldiers defending their homeland.\",\n",
+    "# \"In this struggle as President Zelenskyy said in his speech to the European Parliament “Light will win over darkness.” The Ukrainian Ambassador to the United States is here tonight.\",\n",
+    "# \"Let each of us here tonight in this Chamber send an unmistakable signal to Ukraine and to the world.\",\n",
+    "# \"Please rise if you are able and show that, Yes, we the United States of America stand with the Ukrainian people.\",\n",
+    "# \"Throughout our history we’ve learned this lesson when dictators do not pay a price for their aggression they cause more chaos.\",\n",
+    "# \"They keep moving.\"]\n",
+    "\n",
     "texts = [\n",
-    "\"Madam Speaker, Madam Vice President, our First Lady and Second Gentleman. Members of Congress and the Cabinet. Justices of the Supreme Court. My fellow Americans.\",\n",
-    "\"Last year COVID-19 kept us apart. This year we are finally together again.\",\n",
-    "\"Tonight, we meet as Democrats Republicans and Independents. But most importantly as Americans.\",\n",
-    "\"With a duty to one another to the American people to the Constitution.\",\n",
-    "\"And with an unwavering resolve that freedom will always triumph over tyranny.\",\n",
-    "\"Six days ago, Russia’s Vladimir Putin sought to shake the foundations of the free world thinking he could make it bend to his menacing ways. But he badly miscalculated.\",\n",
-    "\"He thought he could roll into Ukraine and the world would roll over. Instead he met a wall of strength he never imagined.\",\n",
-    "\"He met the Ukrainian people.\",\n",
-    "\"From President Zelenskyy to every Ukrainian, their fearlessness, their courage, their determination, inspires the world.\",\n",
-    "\"Groups of citizens blocking tanks with their bodies. Everyone from students to retirees teachers turned soldiers defending their homeland.\",\n",
-    "\"In this struggle as President Zelenskyy said in his speech to the European Parliament “Light will win over darkness.” The Ukrainian Ambassador to the United States is here tonight.\",\n",
-    "\"Let each of us here tonight in this Chamber send an unmistakable signal to Ukraine and to the world.\",\n",
-    "\"Please rise if you are able and show that, Yes, we the United States of America stand with the Ukrainian people.\",\n",
-    "\"Throughout our history we’ve learned this lesson when dictators do not pay a price for their aggression they cause more chaos.\",\n",
-    "\"They keep moving.\"]\n",
+    "\"Hello, world!\",\n",
+    "\"Nice weather today!\",\n",
+    "\"The quick brown fox\",\n",
+    "\"I love learning SQL\",\n",
+    "\"PostgreSQL is great\",\n",
+    "\"Python is my favorite language\",\n",
+    "\"Thanks for the explanation\",\n",
+    "\"See you later!\",\n",
+    "\"I'm learning about NLP\",\n",
+    "\"Machine learning is fun\",\"I started liking NLP\"]\n",
     "\n",
     "uuids = store.add_texts(texts)\n",
     "print(uuids)"
@@ -1087,7 +1110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
