Added the PGVector performance benchmarking changes

--- a/VectorDB-PGVector/PGVector-Performance.ipynb
+++ b/VectorDB-PGVector/PGVector-Performance.ipynb
@@ -334,7 +334,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Retriever - Retrieve top K relevant docs"
+    "### 4. Retriever - Retrieve top K relevant docs\n",
+    "\n",
+    "Let's retrieve the top K highest-scoring documents from PGVector:\n",
+    "\n",
+    "The key functionality:\n",
+    "\n",
+    "- We select the id and review from the REVIEW table.\n",
+    "- The <=> operator computes the cosine distance between two vectors. For cosine distance, the result ranges from 0 (indicating perfect similarity) to 2 (indicating complete dissimilarity).\n",
+    "- We order by embedding <=> query_embedding which will order by nearest neighbor score.\n",
+    "- Limit to k=10 results to get the top 10 closest matches."
    ]
   },
   {
